--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,7 +17,12 @@
       </div>
       <div class="form-group">
         <label for="password">Senha</label>
-        <input type="password" id="password" name="password" placeholder="Digite sua senha">
+        <div class="password-container">
+          <input type="password" id="password" name="password" placeholder="Digite sua senha">
+          <button type="button" id="togglePassword">
+            <span class="material-icons" id="visibilityIcon">visibility</span>
+          </button>
+        </div>
       </div>
       <button type="submit" class="login-button">Entrar</button>
     </form>
@@ -24,5 +30,16 @@
       <p>Esqueceu a senha? <a href="#">Clique aqui</a></p>
     </div>
   </div>
+  <script>
+    const passwordField = document.getElementById('password');
+    const togglePasswordButton = document.getElementById('togglePassword');
+    const visibilityIcon = document.getElementById('visibilityIcon');
+    togglePasswordButton.addEventListener('click', () => {
+      const type = passwordField.type === 'password' ? 'text' : 'password';
+      passwordField.type = type;
+      visibilityIcon.textContent = type === 'password' ? 'visibility' : 'visibility_off';
+    });
+  </script>
+
 </body>
 </html>
